--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -58,6 +58,21 @@
             <h4>Hello there,</h4>
             <p>Eda</p>
         </div>
+        <a href="#">
+            <div class="doctors-icon">
+                <img src="{{ url_for('static', filename='images/Doctors.png') }}">
+            </div>
+        </a>
+        <a href="#">
+            <div class="medtech-icon">
+                <img src="{{ url_for('static', filename='images/Medtech.png') }}">
+            </div>
+        </a>
+        <a href="#">
+            <div class="receptionist-icon">
+                <img src="{{ url_for('static', filename='images/Receptionist.png') }}">
+            </div>
+        </a>
     </main>
 </body>
 </html>
