--- a/app/templates/receptionist.html
+++ b/app/templates/receptionist.html
@@ -63,7 +63,21 @@
             <h4>Hello there,</h4>
             <p>Eda</p>
         </div>
-        
+        <a href="#">
+            <div class="add-icon">
+                <img src="{{ url_for('static', filename='images/Add Appointment.png') }}">
+            </div>
+        </a>
+        <a href="#">
+            <div class="reschedule-icon">
+                <img src="{{ url_for('static', filename='images/Reschedule Appointment.png') }}">
+            </div>
+        </a>
+        <a href="#">
+            <div class="cancel-icon">
+                <img src="{{ url_for('static', filename='images/Cancel Appointment.png') }}">
+            </div>
+        </a>
     </main>
 </body>
 </html>
