--- a/app/templates/doctor.html
+++ b/app/templates/doctor.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='doctor-style.css') }}">
 </head>
 <body>
+    <!-- NAVIGATION -->
     <div class="sidenav-bg">
         <div class="cms-logo">
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
@@ -64,5 +65,35 @@
             </a>
         </ul>
     </div>
+
+    <!-- DASHBOARD -->
+    <main>
+        <div class="main-bg"></div>
+        <div class="dashboard-header">
+            <div class="greetings">
+                <h4>Hello there,</h4>
+                <p>Doc Eda</p>
+            </div>
+            <p class="date-time" id="demo"></p>
+        </div>
+    </main>
 </body>
+<script>
+    function displayDateAndTime() {
+    const demoElement = document.getElementById('demo');
+
+        function updateDateAndTime() {
+            const currentDateAndTime = new Date();
+            const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+            const formattedDateAndTime = currentDateAndTime.toLocaleDateString(undefined, options);
+            const currentTime = currentDateAndTime.toLocaleTimeString();
+
+            demoElement.innerHTML = `TODAY IS ${formattedDateAndTime.toUpperCase()}<br><br>${currentTime}`;
+        }
+        updateDateAndTime();
+        setInterval(updateDateAndTime, 1000);
+    }
+
+    displayDateAndTime();   
+</script>
 </html>
