--- a/app/templates/receptionist.html
+++ b/app/templates/receptionist.html
@@ -59,9 +59,12 @@
         </ul>
     </div>
     <main>
-        <div class="greetings">
-            <h4>Hello there,</h4>
-            <p>Eda</p>
+        <div class="dashboard-header">
+            <div class="greetings">
+                <h4>Hello there,</h4>
+                <p>Doc Eda</p>
+            </div>
+            <p class="date-time" id="demo"></p>
         </div>
         <a href="#">
             <div class="add-icon">
@@ -80,4 +83,22 @@
         </a>
     </main>
 </body>
+<script>
+    function displayDateAndTime() {
+    const demoElement = document.getElementById('demo');
+
+        function updateDateAndTime() {
+            const currentDateAndTime = new Date();
+            const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+            const formattedDateAndTime = currentDateAndTime.toLocaleDateString(undefined, options);
+            const currentTime = currentDateAndTime.toLocaleTimeString();
+
+            demoElement.innerHTML = `TODAY IS ${formattedDateAndTime.toUpperCase()}<br>${currentTime}`;
+        }
+        updateDateAndTime();
+        setInterval(updateDateAndTime, 1000);
+    }
+
+    displayDateAndTime();   
+</script>
 </html>
