--- a/app/static/admin-style.css
+++ b/app/static/admin-style.css
@@ -218,5 +218,5 @@ ul li p {
 .doctors-icon img:hover,
 .medtech-icon img:hover,
 .receptionist-icon img:hover {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1); 
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1), -5px -5px 10px rgba(0, 0, 0, 0.1);
 }
