--- a/app/templates/doctor.html
+++ b/app/templates/doctor.html
@@ -88,7 +88,7 @@
             const formattedDateAndTime = currentDateAndTime.toLocaleDateString(undefined, options);
             const currentTime = currentDateAndTime.toLocaleTimeString();
 
-            demoElement.innerHTML = `TODAY IS ${formattedDateAndTime.toUpperCase()}<br><br>${currentTime}`;
+            demoElement.innerHTML = `TODAY IS ${formattedDateAndTime.toUpperCase()}<br>${currentTime}`;
         }
         updateDateAndTime();
         setInterval(updateDateAndTime, 1000);
