--- a/app/templates/medtech.html
+++ b/app/templates/medtech.html
@@ -52,5 +52,35 @@
             </a>
         </ul>
     </div>
+
+    <!-- DASHBOARD -->
+    <main>
+        <div class="main-bg"></div>
+        <div class="dashboard-header">
+            <div class="greetings">
+                <h4>Hello there,</h4>
+                <p>Eda</p>
+            </div>
+            <p class="date-time" id="demo"></p>
+        </div>
+    </main>
 </body>
+<script>
+    function displayDateAndTime() {
+    const demoElement = document.getElementById('demo');
+
+        function updateDateAndTime() {
+            const currentDateAndTime = new Date();
+            const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+            const formattedDateAndTime = currentDateAndTime.toLocaleDateString(undefined, options);
+            const currentTime = currentDateAndTime.toLocaleTimeString();
+
+            demoElement.innerHTML = `TODAY IS ${formattedDateAndTime.toUpperCase()}<br>${currentTime}`;
+        }
+        updateDateAndTime();
+        setInterval(updateDateAndTime, 1000);
+    }
+
+    displayDateAndTime();   
+</script>
 </html>
