--- a/app/templates/doctor_appointment.html
+++ b/app/templates/doctor_appointment.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}DocCare | Appointment{% endblock title %}</title>
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='/images/DocCare favicon.ico') }}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='doctor-style.css') }}">
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}DocCare | Appointment{% endblock title %}
+{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='doctor-style.css') }}"> {% endblock %}
+{% block content %}
     <div class="sidenav-bg">
         <div class="cms-logo">
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
@@ -66,3 +56,4 @@
     </div>
 </body>
 </html>
+{% endblock %}
