--- a/app/templates/receptionist.html
+++ b/app/templates/receptionist.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}DocCare | Dashboard{% endblock title %}</title>
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='/images/DocCare favicon.ico') }}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='receptionist-style.css') }}">
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}DocCare | Dashboard{% endblock title %}
+{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='receptionist-style.css') }}"> {% endblock %}
+{% block content %}
     <div class="sidenav-bg">
         <div class="cms-logo">
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
@@ -82,7 +72,7 @@
             </div>
         </a>
     </main>
-</body>
+
 <script>
     function displayDateAndTime() {
     const demoElement = document.getElementById('demo');
@@ -101,4 +91,4 @@
 
     displayDateAndTime();   
 </script>
-</html>
+{% endblock %}
