Modified HTML and CSS files for better user experience

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -36,7 +36,7 @@
         </div>
         <ul>
             <a href="{{ url_for('admin.logout') }}">
-                <li>
+                <li class="logout">
                     <img src="{{ url_for('static', filename='images/Logout.png') }}">
                     <p>Logout</p>
                 </li>
