--- a/app/static/admin-style.css
+++ b/app/static/admin-style.css
@@ -45,6 +45,7 @@
 .cms-logo img {
     width: 55px;
     margin-left: 5px;
+    cursor: pointer;
 }
 
 .cms-logo p {
@@ -58,13 +59,13 @@
     display: none; 
 }
 
-.sidenav-bg:hover .cms-logo p {
+/* .sidenav-bg:hover .cms-logo p {
     display: flex;
 }
 
 .sidenav-bg:hover .cms-logo h4 {
     display: flex;
-}
+} */
 
 .cms-logo p {
     margin-left: 15px;
@@ -84,10 +85,16 @@
     z-index: 1;
 }
 
-.sidenav-bg:hover {
+.logout:hover p {
+    display: flex;
+    margin-left: 35px;
+    transition: 0.5s;
+}
+
+/* .sidenav-bg:hover {
     width: 249px;
     z-index: 2;
-}
+} */
 
 .icon-bg {
     width: 100%;  
@@ -97,12 +104,36 @@
     padding: 4px;
 }
 
+.icon-bg:hover {
+    background-color: white;
+    width: 249px;   
+    transition: width 0.3s;
+}
+
+.icon-bg:hover p {
+    display: flex;
+    margin-left: 35px;
+    transition: 0.5s;
+}
+
 .selected-icon-bg {
     width: 100%;  
     height: 62px; 
     background-color: white; 
     border-radius: 30px; 
     padding: 4px;
+}
+
+.selected-icon-bg:hover {
+    background-color: white;
+    width: 249px;   
+    transition: 0.2s;
+}
+
+.selected-icon-bg:hover p {
+    display: flex;
+    margin-left: 35px;
+    transition: 0.5s;
 }
 
 ul {
@@ -136,13 +167,13 @@ ul li p {
     display: none;
 }
 
-.sidenav-bg:hover ul li p {
+/* .sidenav-bg:hover ul li p {
     display: block;
 }
 
 .sidenav-bg:hover ul li img {
     margin-right: 14px;
-}
+} */
 
 /* SIDEBAR USER */
 .sidenav-user-bg div {
@@ -156,11 +187,6 @@ ul li p {
 
 .sidenav-user-bg div {
     margin-left: 30px;
-}
-
-.sidenav-bg:hover .icon-bg:hover {
-    background-color: white;
-    transition: 0.3s;
 }
 
 .sidenav-user-bg {
@@ -178,13 +204,13 @@ ul li p {
     overflow: hidden;
 }
 
-.sidenav-bg:hover .sidenav-user-bg {
+/* .sidenav-bg:hover .sidenav-user-bg {
     background: rgba(255, 255, 255, 1);
 }
 
 .sidenav-bg:hover .sidenav-user-bg div {
     display: block;
-}
+} */
 
 /* DASHBOARD */
 .doctors-icon img {
@@ -219,4 +245,6 @@ ul li p {
 .medtech-icon img:hover,
 .receptionist-icon img:hover {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1), -5px -5px 10px rgba(0, 0, 0, 0.1);
+    transform: scale(105%);
+    z-index: 1;
 }
