--- a/app/static/doctor-style.css
+++ b/app/static/doctor-style.css
@@ -54,13 +54,13 @@
     display: none; 
 }
 
-.sidenav-bg:hover .cms-logo p {
+/* .sidenav-bg:hover .cms-logo p {
     display: flex;
 }
 
 .sidenav-bg:hover .cms-logo h4 {
     display: flex;
-}
+} */
 
 .cms-logo p {
     margin-left: 15px;
@@ -80,10 +80,16 @@
     z-index: 1;
 }
 
-.sidenav-bg:hover {
+.logout:hover p {
+    display: flex;
+    margin-left: 35px;
+    transition: 0.5s;
+}
+
+/* .sidenav-bg:hover {
     width: 249px;
     z-index: 2;
-}
+} */
 
 .icon-bg {
     width: 100%;  
@@ -93,12 +99,36 @@
     padding: 4px;
 }
 
+.icon-bg:hover {
+    background-color: white;
+    width: 249px;   
+    transition: width 0.3s;
+}   
+
+.icon-bg:hover p {
+    display: flex;
+    margin-left: 35px;
+    transition: 0.5s;
+}
+
 .selected-icon-bg {
     width: 100%;  
     height: 62px; 
     background-color: white; 
     border-radius: 30px; 
     padding: 4px;
+}
+
+.selected-icon-bg:hover {
+    background-color: white;
+    width: 249px;   
+    transition: 0.2s;
+}
+
+.selected-icon-bg:hover p {
+    display: flex;
+    margin-left: 35px;
+    transition: 0.5s;
 }
 
 ul {
@@ -132,13 +162,13 @@ ul li p {
     display: none;
 }
 
-.sidenav-bg:hover ul li p {
+/* .sidenav-bg:hover ul li p {
     display: block;
 }
 
 .sidenav-bg:hover ul li img {
     margin-right: 14px;
-}
+} */
 
 /* SIDEBAR USER */
 .sidenav-user-bg div {
@@ -154,10 +184,10 @@ ul li p {
     margin-left: 30px;
 }
 
-.sidenav-bg:hover .icon-bg:hover {
+/* .sidenav-bg:hover .icon-bg:hover {
     background-color: white;
     transition: 0.3s;
-}
+} */
 
 .sidenav-user-bg {
     font-size: 12px;
@@ -174,13 +204,13 @@ ul li p {
     overflow: hidden;
 }
 
-.sidenav-bg:hover .sidenav-user-bg {
+/* .sidenav-bg:hover .sidenav-user-bg {
     background: rgba(255, 255, 255, 1);
 }
 
 .sidenav-bg:hover .sidenav-user-bg div {
     display: block;
-}
+} */
 
 /* DASHBOARD */
 .main-bg {
