--- a/app/templates/doctor.html
+++ b/app/templates/doctor.html
@@ -48,7 +48,7 @@
         </div>
         <ul>
             <a href="{{ url_for('doctor.logout') }}">
-                <li>
+                <li class="logout">
                     <img src="{{ url_for('static', filename='images/Logout.png') }}">
                     <p>Logout</p>
                 </li>
