--- a/app/templates/medtech.html
+++ b/app/templates/medtech.html
@@ -35,7 +35,7 @@
         </div>
         <ul>
             <a href="{{ url_for('medtech.logout') }}">
-                <li>
+                <li class="logout">
                     <img src="{{ url_for('static', filename='images/Logout.png') }}">
                     <p>Logout</p>
                 </li>
