--- a/app/templates/receptionist.html
+++ b/app/templates/receptionist.html
@@ -41,7 +41,7 @@
         </div>
         <ul>
             <a href="{{ url_for('receptionist.logout') }}">
-                <li>
+                <li class="logout">
                     <img src="{{ url_for('static', filename='images/Logout.png') }}">
                     <p>Logout</p>
                 </li>
