--- a/app/static/admin-style.css
+++ b/app/static/admin-style.css
@@ -59,14 +59,6 @@
     display: none; 
 }
 
-/* .sidenav-bg:hover .cms-logo p {
-    display: flex;
-}
-
-.sidenav-bg:hover .cms-logo h4 {
-    display: flex;
-} */
-
 .cms-logo p {
     margin-left: 15px;
 }
@@ -91,23 +83,20 @@
     transition: 0.5s;
 }
 
-/* .sidenav-bg:hover {
-    width: 249px;
-    z-index: 2;
-} */
-
 .icon-bg {
     width: 100%;  
     height: 62px; 
     background-color: var(--blueB); 
     border-radius: 30px; 
     padding: 4px;
+    transition: width 0.3s;
 }
 
 .icon-bg:hover {
-    background-color: white;
     width: 249px;   
-    transition: width 0.3s;
+    transition: width 0.3s, background-image 0.3s;
+    background-image: linear-gradient(to right, var(--blueB), white); 
+    
 }
 
 .icon-bg:hover p {
@@ -167,14 +156,6 @@ ul li p {
     display: none;
 }
 
-/* .sidenav-bg:hover ul li p {
-    display: block;
-}
-
-.sidenav-bg:hover ul li img {
-    margin-right: 14px;
-} */
-
 /* SIDEBAR USER */
 .sidenav-user-bg div {
     display: none;
@@ -204,14 +185,6 @@ ul li p {
     overflow: hidden;
 }
 
-/* .sidenav-bg:hover .sidenav-user-bg {
-    background: rgba(255, 255, 255, 1);
-}
-
-.sidenav-bg:hover .sidenav-user-bg div {
-    display: block;
-} */
-
 /* DASHBOARD */
 .doctors-icon img {
     width: 450px;
@@ -238,13 +211,13 @@ ul li p {
 .medtech-icon img,
 .receptionist-icon img {
     position: fixed;
-    transition: box-shadow 0.3s; 
+    /* transition: box-shadow 0.3s;  */
 }
 
 .doctors-icon img:hover,
 .medtech-icon img:hover,
 .receptionist-icon img:hover {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1), -5px -5px 10px rgba(0, 0, 0, 0.1);
-    transform: scale(105%);
+    /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1), -5px -5px 10px rgba(0, 0, 0, 0.1); */
+    transform: scale(101%);
     z-index: 1;
 }
