--- a/app/static/medtech-style.css
+++ b/app/static/medtech-style.css
@@ -54,14 +54,6 @@
     display: none; 
 }
 
-/* .sidenav-bg:hover .cms-logo p {
-    display: flex;
-}
-
-.sidenav-bg:hover .cms-logo h4 {
-    display: flex;
-} */
-
 .cms-logo p {
     margin-left: 15px;
 }
@@ -86,29 +78,19 @@
     transition: 0.5s;
 }
 
-/* .logout:hover p {
-    display: flex;
-    margin-left: 35px;
-    transition: 0.5s;
-} */
-
-/* .sidenav-bg:hover {
-    width: 249px;
-    z-index: 2;
-} */
-
 .icon-bg {
     width: 100%;  
     height: 62px; 
     background-color: var(--blueB); 
     border-radius: 30px; 
     padding: 4px;
+    transition: width 0.3s;
 }
 
 .icon-bg:hover {
-    background-color: white;
     width: 249px;   
-    transition: width 0.3s;
+    transition: width 0.3s, background-image 0.3s;
+    background-image: linear-gradient(to right, var(--blueB), white); 
 }   
 
 .icon-bg:hover p {
@@ -168,14 +150,6 @@ ul li p {
     display: none;
 }
 
-/* .sidenav-bg:hover ul li p {
-    display: block;
-}
-
-.sidenav-bg:hover ul li img {
-    margin-right: 14px;
-} */
-
 /* SIDEBAR USER */
 .sidenav-user-bg div {
     display: none;
@@ -189,11 +163,6 @@ ul li p {
 .sidenav-user-bg div {
     margin-left: 30px;
 }
-
-/* .sidenav-bg:hover .icon-bg:hover {
-    background-color: white;
-    transition: 0.3s;
-} */
 
 .sidenav-user-bg {
     font-size: 12px;
@@ -209,14 +178,6 @@ ul li p {
     white-space: nowrap;
     overflow: hidden;
 }
-
-/* .sidenav-bg:hover .sidenav-user-bg {
-    background: rgba(255, 255, 255, 1);
-}
-
-.sidenav-bg:hover .sidenav-user-bg div {
-    display: block;
-} */
 
 /* DASHBOARD */
 .main-bg {
