--- a/app/static/receptionist-style.css
+++ b/app/static/receptionist-style.css
@@ -54,14 +54,6 @@
     display: none; 
 }
 
-/* .sidenav-bg:hover .cms-logo p {
-    display: flex;
-}
-
-.sidenav-bg:hover .cms-logo h4 {
-    display: flex;
-} */
-
 .cms-logo p {
     margin-left: 15px;
 }
@@ -86,23 +78,19 @@
     transition: 0.5s;
 }
 
-/* .sidenav-bg:hover {
-    width: 249px;
-    z-index: 2;
-} */
-
 .icon-bg {
     width: 100%;  
     height: 62px; 
     background-color: var(--blueB); 
     border-radius: 30px; 
     padding: 4px;
+    transition: width 0.3s;
 }
 
 .icon-bg:hover {
-    background-color: white;
     width: 249px;   
-    transition: width 0.3s;
+    transition: width 0.3s, background-image 0.3s;
+    background-image: linear-gradient(to right, var(--blueB), white); 
 }   
 
 .icon-bg:hover p {
@@ -162,14 +150,6 @@ ul li p {
     display: none;
 }
 
-/* .sidenav-bg:hover ul li p {
-    display: block;
-}
-
-.sidenav-bg:hover ul li img {
-    margin-right: 14px;
-} */
-
 /* SIDEBAR USER */
 .sidenav-user-bg div {
     display: none;
@@ -183,11 +163,6 @@ ul li p {
 .sidenav-user-bg div {
     margin-left: 30px;
 }
-
-/* .sidenav-bg:hover .icon-bg:hover {
-    background-color: white;
-    transition: 0.3s;
-} */
 
 .sidenav-user-bg {
     font-size: 12px;
@@ -252,13 +227,13 @@ ul li p {
 .reschedule-icon img,
 .cancel-icon img {
     position: fixed;
-    transition: box-shadow 0.3s; 
+    /* transition: box-shadow 0.3s;  */
 }
 
 .add-icon img:hover,
 .reschedule-icon img:hover,
 .cancel-icon img:hover {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1), -5px -5px 10px rgba(0, 0, 0, 0.1);
-    transform: scale(110%);
+    /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1), -5px -5px 10px rgba(0, 0, 0, 0.1); */
+    transform: scale(101%);
     z-index: 1;
 }
