--- a/app/static/doctor-style.css
+++ b/app/static/doctor-style.css
@@ -1,182 +1,20 @@
-:root {
-    --blueA: #0277BD;
-    --blueB: #A3D5FF;
-    --blueC: #DFF1FF;
-}
-
-* {
-    box-sizing: border-box;
-    font-family: 'Inter';
-    margin: 0;
-    padding: 0;
-}
+@import "base_style.css";
 
 /* WELCOME MESSAGE */
 .greetings {
     display: flex;
 }
 
-.greetings h4 {
-    font-weight: 900;
-    color: var(--blueB);
-    font-size: 22px;
-}
-
-.greetings p {
-    font-weight: 900;
-    color: var(--blueA);
-    margin-left: 10px;
-    font-size: 24px;
-}
-
-/* SIDEBAR DOCCARE LOGO */
-.cms-logo {
-    display: flex;
-    margin-top: 40px;
-    margin-bottom: 35px;
-    align-items: center;
-    font-size: 32px;
-}
-
-.cms-logo img {
-    width: 55px;
-    margin-left: 5px;
-}
-
-.cms-logo p {
-    font-weight: 400;
-    display: none;
-}
-
-.cms-logo h4 {
-    font-weight: 900;
-    color: var(--blueA);
-    display: none; 
-}
-
-.cms-logo p {
-    margin-left: 15px;
-}
-
-/* SIDEBAR */
-.sidenav-bg {
-    width: 80px;  
-    height: 700px; 
-    background-color: var(--blueC);
-    border-radius: 50px; 
-    position: fixed;  
-    margin-top: 6px;
-    margin-left: 10px;
-    padding: 8px;
-    transition: width 0ms;
-    z-index: 1;
-}
-
-.logout:hover p {
-    display: flex;
-    margin-left: 35px;
-    transition: 0.5s;
-}
-
-.icon-bg {
-    width: 100%;  
-    height: 62px; 
-    background-color: var(--blueB); 
-    border-radius: 30px; 
-    padding: 4px;
-    transition: width 0.3s;
-}
-
-.icon-bg:hover {
-    background-color: white;
-    width: 249px;   
-    transition: width 0.3s, background-image 0.3s;
-    background-image: linear-gradient(to right, var(--blueB), white);
-}   
-
-.icon-bg:hover p {
-    display: flex;
-    margin-left: 35px;
-    transition: 0.5s;
-}
-
-.selected-icon-bg {
-    width: 100%;  
-    height: 62px; 
-    background-color: white; 
-    border-radius: 30px; 
-    padding: 4px;
-}
-
-.selected-icon-bg:hover {
-    background-color: white;
-    width: 249px;   
-    transition: 0.2s;
-}
-
-.selected-icon-bg:hover p {
-    display: flex;
-    margin-left: 35px;
-    transition: 0.5s;
-}
-
-ul {
-    list-style: none;
-}
-
-ul li {
-    margin-bottom: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 900;
-    transition: 1ms;
-}
-
-a {
-    text-decoration: none;
-    color: black;
-}
-
-ul li img {
-    margin-right: 0px;
-    margin-left: 15px;
-    width: 26px;
-}
-
-ul li p {
-    white-space: nowrap;
-    display: none;
-}
-
 /* SIDEBAR USER */
-.sidenav-user-bg div {
-    display: none;
-}
-
-.user-img {
-    width: 45px;
-    border-radius: 100%;
-}
-
-.sidenav-user-bg div {
-    margin-left: 30px;
-}
-
 .sidenav-user-bg {
     font-size: 12px;
     display: flex;
     align-items: center;
-    justify-content: center;
     height: 65px; 
-    background: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
+    background-color: white;
     border-radius: 350px; 
     margin-top: 71px;
     margin-bottom: 10px;
-    white-space: nowrap;
     overflow: hidden;
 }
 
