Reorganize folder structure for categorization.

--- a/app/static/medtech_style.css
+++ b/app/static/medtech_style.css
@@ -8,7 +8,7 @@
     height: 65px; 
     background-color: white;
     border-radius: 350px; 
-    margin-top: 70px;
+    margin-top: 205px;
     margin-bottom: 25px;
     overflow: hidden;
 }
@@ -25,3 +25,9 @@
     transform: translate(-50%, -50%);
     position: absolute;
 }
+
+/* PATIENT */
+/* style here */
+
+/* PROFILE */
+/* style here */
