--- a/app/static/receptionist_style.css
+++ b/app/static/receptionist_style.css
@@ -47,3 +47,14 @@
     transform: scale(101%);
     z-index: 1;
 }
+
+/* APPOINTMENT */
+/* style here */
+
+
+/* CALENDAR */
+/* style here */
+
+
+/* PROFILE */
+/* style here */
