--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}DocCare | Dashboard{% endblock title %}
-{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='admin-style.css') }}"> {% endblock %}
+{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='admin_style.css') }}"> {% endblock %}
 {% block content %}
     <!-- SIDE NAV -->
     <div class="sidenav-bg">
