--- a/app/templates/doctor/calendar.html
+++ b/app/templates/doctor/calendar.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
 {% block title %}DocCare | Calendar{% endblock title %}
-{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='doctor-style.css') }}"> {% endblock %}
+{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='doctor_style.css') }}"> {% endblock %}
 {% block content %}
     <div class="sidenav-bg">
         <div class="cms-logo">
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
-            <p class="doc">Doc</p>
-            <h4 class="care">Care</h4>
         </div>
         <ul>
             <a href="{{ url_for('doctor.dashboard') }}">
@@ -47,7 +45,7 @@
         </div>
         <ul>
             <a href="{{ url_for('doctor.logout') }}">
-                <li>
+                <li class="logout">
                     <img src="{{ url_for('static', filename='images/Logout.png') }}">
                     <p>Logout</p>
                 </li>
