--- a/app/templates/admin/profile.html
+++ b/app/templates/admin/profile.html
@@ -1,24 +1,23 @@
 {% extends "base.html" %}
 {% block title %}DocCare | Profile{% endblock title %}
-{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='medtech-style.css') }}"> {% endblock %}
+{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='admin_style.css') }}"> {% endblock %}
 {% block content %}
+    <!-- SIDE NAV -->
     <div class="sidenav-bg">
         <div class="cms-logo">
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
-            <p class="doc">Doc</p>
-            <h4 class="care">Care</h4>
         </div>
         <ul>
-            <a href="{{ url_for('medtech.dashboard') }}">
+            <a href="{{ url_for('admin.dashboard') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
                     <p>Dashboard</p>
                 </li>
             </a>
-            <a href="{{ url_for('medtech.patient') }}">
+            <a href="{{ url_for('admin.user_management') }}">
                 <li class="icon-bg">
-                    <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
-                    <p>Patient</p>
+                    <img src="{{ url_for('static', filename='images/User Management.png') }}"> 
+                    <p>User Management</p>
                 </li>
             </a>
             <li class="selected-icon-bg">
@@ -30,16 +29,19 @@
             <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
-                <p>Medtech</p>
+                <p>Admin</p>
             </div>
         </div>
         <ul>
-            <a href="{{ url_for('medtech.logout') }}">
-                <li>
+            <a href="{{ url_for('admin.logout') }}">
+                <li class="logout">
                     <img src="{{ url_for('static', filename='images/Logout.png') }}">
                     <p>Logout</p>
                 </li>
             </a>
         </ul>
     </div>
-{% endblock %}
+
+</body>
+</html>
+{% endblock %}  
