--- a/app/templates/doctor/appointment.html
+++ b/app/templates/doctor/appointment.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
-{% block title %}DocCare | Profile{% endblock title %}
-{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='doctor-style.css') }}"> {% endblock %}
+{% block title %}DocCare | Appointment{% endblock title %}
+{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='doctor_style.css') }}"> {% endblock %}
 {% block content %}
     <div class="sidenav-bg">
         <div class="cms-logo">
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
-            <p class="doc">Doc</p>
-            <h4 class="care">Care</h4>
         </div>
         <ul>
             <a href="{{ url_for('doctor.dashboard') }}">
@@ -21,22 +19,22 @@
                     <p>Calendar</p>
                 </li>
             </a>
-            <a href="{{ url_for('doctor.appointment') }}">
-                <li class="icon-bg">
-                    <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
-                    <p>Appointment</p>
-                </li>
-            </a>
+            <li class="selected-icon-bg">
+                <img src="{{ url_for('static', filename='images/Appointment.png') }}"> 
+                <p>Appointment</p>
+            </li>
             <a href="{{ url_for('doctor.patient') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
                     <p>Patient</p>
                 </li>
             </a>
-            <li class="selected-icon-bg">
-                <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
-                <p>Profile</p>
-            </li>
+            <a href="{{ url_for('doctor.profile') }}">
+                <li class="icon-bg">
+                    <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
+                    <p>Profile</p>
+                </li>
+            </a>
         </ul>
         <div class="sidenav-user-bg">
             <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
@@ -47,11 +45,13 @@
         </div>
         <ul>
             <a href="{{ url_for('doctor.logout') }}">
-                <li>
+                <li class="logout">
                     <img src="{{ url_for('static', filename='images/Logout.png') }}">
                     <p>Logout</p>
                 </li>
             </a>
         </ul>
     </div>
+</body>
+</html>
 {% endblock %}
