--- a/app/templates/medtech/dashboard.html
+++ b/app/templates/medtech/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}DocCare | Dashboard{% endblock title %}
-{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='medtech-style.css') }}"> {% endblock %}
+{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='medtech_style.css') }}"> {% endblock %}
 {% block content %}
     <div class="sidenav-bg">
         <div class="cms-logo">
@@ -48,22 +48,23 @@
         <p class="date-time" id="demo"></p>
     </main>
 
-<script>
-    function displayDateAndTime() {
-    const demoElement = document.getElementById('demo');
+    <script>
+        function displayDateAndTime() {
+        const demoElement = document.getElementById('demo');
 
-        function updateDateAndTime() {
-            const currentDateAndTime = new Date();
-            const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-            const formattedDateAndTime = currentDateAndTime.toLocaleDateString(undefined, options);
-            const currentTime = currentDateAndTime.toLocaleTimeString();
+            function updateDateAndTime() {
+                const currentDateAndTime = new Date();
+                const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+                const formattedDateAndTime = currentDateAndTime.toLocaleDateString(undefined, options);
+                const currentTime = currentDateAndTime.toLocaleTimeString();
 
-            demoElement.innerHTML = `TODAY IS ${formattedDateAndTime.toUpperCase()}<br>${currentTime}`;
+                demoElement.innerHTML = `TODAY IS ${formattedDateAndTime.toUpperCase()}<br>${currentTime}`;
+            }
+            updateDateAndTime();
+            setInterval(updateDateAndTime, 1000);
         }
-        updateDateAndTime();
-        setInterval(updateDateAndTime, 1000);
-    }
 
-    displayDateAndTime();   
-</script>
+        displayDateAndTime();   
+    </script>
+    
 {% endblock %}
