--- a/app/templates/medtech/patient.html
+++ b/app/templates/medtech/patient.html
@@ -1,26 +1,23 @@
 {% extends "base.html" %}
-{% block title %}DocCare | User Management{% endblock title %}
-{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='admin-style.css') }}"> {% endblock %}
+{% block title %}DocCare | Patient{% endblock title %}
+{% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='medtech_style.css') }}"> {% endblock %}
 {% block content %}
-    <!-- SIDE NAV -->
     <div class="sidenav-bg">
         <div class="cms-logo">
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
-            <p class="doc">Doc</p>
-            <h4 class="care">Care</h4>
         </div>
         <ul>
-            <a href="{{ url_for('admin.dashboard') }}">
+            <a href="{{ url_for('medtech.dashboard') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
                     <p>Dashboard</p>
                 </li>
             </a>
             <li class="selected-icon-bg">
-                <img src="{{ url_for('static', filename='images/User Management.png') }}"> 
-                <p>User Management</p>
+                <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
+                <p>Patient</p>
             </li>
-            <a href="{{ url_for('admin.profile') }}">
+            <a href="{{ url_for('medtech.profile') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Profile.png') }}"> 
                     <p>Profile</p>
@@ -31,19 +28,16 @@
             <img src="{{ url_for('static', filename='images/user.jpg') }}" class="user-img">
             <div>
                 <h3>Eda Grace P.</h3>
-                <p>Admin</p>
+                <p>Medtech</p>
             </div>
         </div>
         <ul>
-            <a href="{{ url_for('admin.logout') }}">
-                <li>
+            <a href="{{ url_for('medtech.logout') }}">
+                <li class="logout">
                     <img src="{{ url_for('static', filename='images/Logout.png') }}">
                     <p>Logout</p>
                 </li>
             </a>
         </ul>
     </div>
-
-</body>
-</html>
-{% endblock %}  
+{% endblock %}
