Fix some minor errors

--- a/app/templates/doctor/patient.html
+++ b/app/templates/doctor/patient.html
@@ -62,7 +62,7 @@
 <div class="patient-header">
     <p>PATIENTS</p>
 </div>
-<div class="patient-table"">
+<div class="patient-table">
     <table id="example" class="table table-striped" style="width:100%">
       <thead>
           <tr>
