--- a/app/static/receptionist_style.css
+++ b/app/static/receptionist_style.css
@@ -130,7 +130,7 @@
     border-radius: .6rem;
     overflow: auto;
     overflow-y: overlay; /* Keep vertical scrollbar */
-    overflow-x: hidden; /* Hide horizontal scrollbar */
+    overflow-x: overlay; /* Hide horizontal scrollbar */
     transition: max-height 0.5s ease-in-out;
 
 }
